--- a/templates/at-index.html
+++ b/templates/at-index.html
@@ -2,7 +2,7 @@
 
 {% block index %}
 
-<!-- ˅ -->
+<!-- ˅ 
 <link rel="shortcut icon" type="image/ico" href="{{ url_for('static', filename='images/favicon.ico') }}"/>
 <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
@@ -18,7 +18,7 @@
 <script defer src="{{ url_for('static', filename='scripts/fontawesome/fontawesome.min.js') }}"></script>
 
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script> -->
 
 <script>
   console.log("---> index <---")
